[package]
name = "sqlite3-header"
description = "A crate to parse/deserialize the sqlite3 header."
version = "0.1.1"
authors = ["Maximilian Burszley <mburszley@gmail.com>"]
edition = "2018"
license = "MIT"
license-file = "LICENSE.md"
readme = "README.md"
homepage = "https://github.com/mburszley/sqlite3-header/"
repository = "https://github.com/mburszley/sqlite3-header/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
