[package]
name = "sqlite3-header"
description = "A crate to parse the sqlite3 header bytes."
version = "0.4.1"
authors = ["Maximilian Burszley <mburszley@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/mburszley/sqlite3-header/"
repository = "https://github.com/mburszley/sqlite3-header/"
